Sat Mar 31 06:20:07 BST 2007  Olly Betts <olly@survex.com>

	* backends/dbfactory_remote.cc: Suppress "unused parameter" warnings.

Sat Mar 31 06:17:35 BST 2007  Olly Betts <olly@survex.com>

	* net/tcpserver.cc: Make global variable and function used only in
	  this file static.  Don't call delete on a void* (that's undefined
	  behaviour) - delete the cast version of the pointer instead.

Sat Mar 31 06:17:20 BST 2007  Olly Betts <olly@survex.com>

	* AUTHORS: Add a number of bug reporters I missed before.

Sat Mar 31 04:49:27 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Clean up handling of --enable-backend-* options.  Let
	  mingw try to build the remote backend.

Sat Mar 31 03:47:49 BST 2007  Olly Betts <olly@survex.com>

	* tests/internaltest.cc: Don't compile test_serialisequery1
	  if the remote backend is disabled to avoid an "unused
	  function" warning (we were already disabling the use of
	  it).

Fri Mar 30 22:43:27 BST 2007  Olly Betts <olly@survex.com>

	* HACKING: Correct several inaccuracies: --enable-debug and
	  --enable-debug=partial don't cause the build system to compile in
	  debugging symbols (configure defaults to adding "-g" for GCC, while
	  for other compilers you must enable them by hand).  Also,
	  --enable-debug doesn't "produce warnings", but causes
	  Xapian::AssertionError to be thrown.  Add explanation for why
	  --enable-debug=partial" exists.  CC_FOR_BUILD is now needed for
	  snowball as well as lemon.

Fri Mar 30 19:53:05 BST 2007  Olly Betts <olly@survex.com>

	* common/utils.cc: Avoid GCC warning on format string "%I64d".

Fri Mar 30 16:48:46 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* common/tcpserver.h,net/tcpserver.cc: Patch from Mark Hammond:
	  implement for windows.

Fri Mar 30 16:21:03 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* common/tcpclient.h,net/tcpclient.cc: Patch from Mark Hammond:
	  implement for windows.
